Fixing text-align description

--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -65,6 +65,7 @@ body, html {
     justify-content: center;
     align-items: center;
     margin: 40px;
+    text-align: center;
 }
 
 .some-products {
